--- a/mdir/Dockerfile
+++ b/mdir/Dockerfile
@@ -2,5 +2,5 @@ FROM mysql
 
 ENV MYSQL_ROOT_PASSWORD=root
 
-ADD ./sql-scripts/ /docker-entrypoint-initdb.d/
+#ADD ./sql-scripts/ /docker-entrypoint-initdb.d/
 
