--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,14 @@ services:
     depends_on:
       - mysql_challange
     ports:
+      - 8020:8080
+    networks:
+      - custom_network_compose
+  frontend_challange:
+    image: frontend_challange
+    depends_on:
+      - rest_challange
+    ports:
       - 8010:8080
     networks:
       - custom_network_compose
